# Simulation-Framework-Playground

./: .bazelrc  .clangd  .gitignore  BUILD  LICENSE  MODULE.bazel  Makefile  README.md  common_copts.bzl  justfile  main.cpp  math.hpp  todo.md
include/: ChargedParticle.hpp  SimManager.hpp  integrator.hpp  logging.hpp  model.hpp
scripts/: build.sh  run.sh  test.sh
sim_framework/: BUILD
sim_framework/include/: ChargedParticle.hpp  LateRef.hpp  constants.hpp  integrator.hpp  model.hpp
sim_framework/include/architecture/: SimManager.hpp  constants.hpp  integrator.hpp
sim_framework/include/models/: ChargedParticle.hpp  model.hpp
sim_framework/include/utils/: LateRef.hpp  logging.hpp
sim_framework/src/: ChargedParticle.cpp  SimManager.cpp
sim_framework/src/architecture/: SimManager.cpp
sim_framework/src/models/: ChargedParticle.cpp
sim_framework/tests/: BUILD  generate_tests.bzl  test_LateRef.cpp  test_SimManager.cpp  test_integration.cpp  test_stdout.cpp
src/: BUILD  ChargedParticle.cpp  CliArgs.hpp  SimManager.cpp  main.cpp
src/include/: utils.hpp
tests/: BUILD  test_LateRef.cpp  test_SimManager.cpp  test_integration.cpp
