###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "cli11", version = "2.5.0")
bazel_dep(name = "magic_enum", version = "0.9.7")
bazel_dep(name = "boost.pfr", version = "1.90.0")
bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "eigen", version = "5.0.1.bcr.2")
bazel_dep(name = "yaml-cpp", version = "0.9.0")
